--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container-fluid">
+      <%= render "common/navbar" %>
+      <%= yield %>
+
+      <%= render "common/footer" %>
+    
   </body>
 </html>
